# odr_web

./: .gitignore  CMakeLists.txt  README.md  build_mac.sh  index.html  package-lock.json  package.json  wasm_build.sh
.github/workflows/: ci.yml  pages.yml
scripts/: build.mjs
src/: main.js  styles.css
src/cpp/odr/: json_serializer.cpp  json_serializer.h  math_util.h  model.h  opendrive_parser.cpp  opendrive_parser.h  xml_lite.cpp  xml_lite.h
src/domain/: coordinates.js  math.js  odrParser.js  opendriveGeometry.js  parserWorker.js  parserWorkerProtocol.js  topologyValidator.js  viewerSettings.js  wasmParser.js  workerParser.js
src/render/: canvasRenderer.js  spatialIndex.js
src/ui/: treeModel.js
src/wasm/: opendrive_wasm.cpp
test/: geometry.test.js
tests/cpp/: opendrive_parser_test.cpp
